--- a/server/.env.example
+++ b/server/.env.example
@@ -30,6 +30,10 @@ TAILCHAT_MEETING_URL=
 ADMIN_USER=tailchat
 ADMIN_PASS=com.msgbyte.tailchat
 
+# livekit
+LIVEKIT_URL=wss://tailchat-sfmvc3b7.livekit.cloud
+LIVEKIT_API_KEY=APIeU5YxRRYXj3D
+LIVEKIT_API_SECRET=pFhdVwAaxvwsRjxPoJIztUGPCvQ896CRvWYoWd6uI1G
 # GETUI Push
 GETUI_APPID=
 GETUI_APPKEY=
